student_files/04/test_iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# default rules
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# echo reply
-A INPUT -m icmp -p icmp --icmp-type 0 -j ACCEPT

# Destination Unreachable
-A INPUT -m icmp -p icmp --icmp-type 3 -j ACCEPT

# Echo
-A INPUT -m icmp -p icmp --icmp-type 8 -j ACCEPT

# Parameter Problem
-A INPUT -m icmp -p icmp --icmp-type 12 -j ACCEPT

# accept ssh
-A INPUT -p tcp --dport 22 -j ACCEPT

# Iptables rules template
-A INPUT -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m udp -p udp --dport 161 -j ACCEPT

# accept all output requests
-A OUTPUT -j ACCEPT

# drop all input requests
-A INPUT -j DROP

# drop all forward requests
-A FORWARD -j DROP

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

COMMIT
